--- a/templates/halloween_summary.html
+++ b/templates/halloween_summary.html
@@ -31,6 +31,39 @@
             overflow: hidden;
         }
 
+        .header {
+            width: 100%;
+            height: 100px;
+            background-color: black;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            color: orange;
+            padding: 0 40px;
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 1000;
+        }
+
+        .menu-icon {
+            color: orange;
+            font-size: 65px;
+        }
+
+        .title {
+            font-size: 36px;
+            font-weight: bold;
+            color: orange;
+            text-shadow:
+                -1px -1px 0 #C64036,
+                1px -1px 0 #C64036,
+                -1px 1px 0 #C64036,
+                1px 1px 0 #C64036;
+            text-align: center;
+            flex-grow: 1;
+        }
+
         .top-left {
            position: absolute;
            top: -50px;
@@ -176,11 +209,15 @@
           gap: 15px;
         }
 
+        .song-text-song {
+            color: black;
+        }
+
         .mood {
           margin-top: 10px;
           font-size: 20px;
           gap: 15px;
-          color: orangered;
+          color: black;
           text-shadow: 1px 1px lightgray;
         }
 
